--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pydantic==2.11.1
 pydantic_core==2.33.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
+sqlmodel==0.0.24
 starlette==0.46.1
 typing-inspection==0.4.0
 typing_extensions==4.13.0
